--- a/index.html
+++ b/index.html
@@ -54,6 +54,55 @@
 </div>
 </Section>
 
+<!--portfolio-->
+<section class="port">
+    <div class="container">
+        <div class="folio">
+<div class="starts">
+    <p>portfolio</p>
+    <h2>Check out our beautifull portfolio</h2>
+</div>
+<div class="apps">
+    <h3>All</h3>
+    <h3>App</h3>
+    <h3>Card</h3>
+    <h3>Web</h3>
+</div>
+<div class="pic">
+    <div class="pic1">
+        <img src="images/portfolio-1.jpg">
+    </div>
+    <div class="pic1">
+        <img src="images/portfolio-2.jpg">
+    </div>
+    <div class="pic1">
+        <img src="images/portfolio-3.jpg">
+    </div>
+    <div class="pic1">
+        <img src="images/portfolio-4.jpg">
+    </div>
+    <div class="pic1">
+        <img src="images/portfolio-5.jpg">
+    </div>
+    <div class="pic1">
+        <img src="images/portfolio-6.jpg">
+    </div>
+    <div class="pic1">
+        <img src="images/portfolio-7.jpg">
+    </div>
+    <div class="pic1">
+        <img src="images/portfolio-8.jpg">
+    </div>
+    <div class="pic1">
+        <img src="images/portfolio-9.jpg">
+    </div>
+</div>
+
+        </div>
+
+    </div>
+</section>
+
 </body>
 
 </html>
